# speds-eat-rocks

./: CMakeLists.txt  VisitorLaTeX.hpp  VisitorMathML.hpp  base.hpp  main.cpp  op.cpp  op.hpp  op_add.cpp  op_add.hpp  op_divide.cpp  op_divide.hpp  op_multiply.cpp  op_multiply.hpp  op_power.cpp  op_power.hpp  op_rand.cpp  op_rand.hpp  op_subtract.cpp  op_subtract.hpp  visitor.hpp
